# ck2savefile

./: .gitignore  LICENSE  README.md  ck_mod.ipynb  pyproject.toml
ck2_savefile/: editor.py  info_representation.py  parser.py  response.py  search_type.py
