[tool.poetry]
name = "ck2savefile"
version = "0.1.0"
description = ""
authors = ["MariusSilviuHriscu <hriscumarius65536@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
